2010-05-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.csproj: Add Debug and Release configurations.

	* Mono.Addins.Database/AddinScanner.cs: Fixed node type
	  parsing issue with TypeExtensionPointAttribute.

2010-05-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins.Database/AddinUpdateData.cs: When resolving
	  extension from an optional module, include dependencies
	  defined in the main module.

	* Mono.Addins.Database/SetupDomain.cs: Flush.

	* Mono.Addins.Database/AddinScanner.cs: Look for assembly
	  imports in the main assembly.

2010-05-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Addins/ExtensionNode.cs:
	* Mono.Addins/ExtensionTree.cs: Data extension points bound to
	  an attribute now generate nodes of type
	  ExtensionNode<TheAttribute>

	* Mono.Addins/Addin.cs: Added some docs.

	* Mono.Addins.Database/AddinScanner.cs:
	* Mono.Addins/ExtensionNodeAttribute.cs:
	* Mono.Addins.Database/AddinUpdateData.cs:
	* Mono.Addins.Description/ExtensionNodeType.cs: Changed name
	  of property (for consistency)

	* Mono.Addins/ExtensionPointAttribute.cs: Don't set a default
	  node name. The default name is assigned while scanning.

	* Mono.Addins.Database/DefaultAssemblyReflector.cs: This class
	  should not be public.

2010-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Addins.csproj: Updated.

	* Mono.Addins/TreeNode.cs:
	* Mono.Addins/AddinEngine.cs:
	* Mono.Addins/RuntimeAddin.cs:
	* Mono.Addins/AddinManager.cs:
	* Mono.Addins/ExtensionTree.cs:
	* Mono.Addins/ExtensionNode.cs:
	* Mono.Addins/ConditionType.cs:
	* Mono.Addins/AddinRegistry.cs:
	* Mono.Addins/ExtensionContext.cs:
	* Mono.Addins/AddinSessionService.cs:
	* Mono.Addins.Database/AddinDatabase.cs:
	* Mono.Addins.Description/Dependency.cs:
	* Mono.Addins.Description/AddinDependency.cs:
	* Mono.Addins.Description/NativeDependency.cs:
	* Mono.Addins.Description/AssemblyDependency.cs: New
	  AddinEngine class, which can be used to support several